Responsive vertical alignment text, fixed columns on page

--- a/css/main.css
+++ b/css/main.css
@@ -215,43 +215,46 @@ textarea {
 .speakers-container{
   display: grid;
   grid-column-gap: 12px;
-  grid-template-columns: repeat(5, 16.6%) 1fr;
+  grid-template-columns: repeat(6, 1fr);
   padding: 40px;
   width: 100%;
   height: 100vh;
 }
 
 .speakers-container .featured-subheader{
-  font-family: Futura PT;
   font-weight: 500;
   text-transform: capitalize;
   font-size: 1.35vw;
-  margin: none;
+  margin-bottom: 0.25rem;
 }
 
 .speakers-container .speaker-list-wrapper{
   display: block;
   width: 100%;
+  height: 100%;
   grid-column: 1/4;
-  border: 1px solid black;
-  transform: rotate(-90deg);
+  /* transform: rotate(-90deg); */
+  position: relative;
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  flex-direction: row;
+  align-items: flex-end;
   justify-content: flex-end;
+  font-family: Futura PT;
 }
 .speakers-container .speaker{
-  margin-bottom: 1rem;
+  margin-right: 1rem;
+  writing-mode: vertical-lr;
+  height: 90%;
+  transform: rotate(180deg);
 }
+
 .speakers-container .speaker h2{
-  font-family: Futura PT;
   font-weight: 500;
   font-size: 3.5vw;;
   margin: 0;
   line-height: 1;
 }
 .speakers-container .speaker p{
-  font-family: Futura PT;
   font-weight: 100;
   font-size: 1.35vw;
   margin: 0;
